fix cloud alignment

--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -14,6 +14,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      position: relative;
     }
   }
 
@@ -43,8 +44,8 @@
 
     @include onTablet {
       position: absolute;
-      bottom: 16%;
       left: 60%;
+      bottom: -200px;
       max-width: 300px;
       width: 100%;
       height: 240px;
